[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quillion"
version = "0.1.1"
description = "Modern asynchronous web framework"
authors = ["anybody"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/base-of-base/quillion"
repository = "https://github.com/base-of-base/quillion"
keywords = [
    "web",
    "framework",
    "async",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"